# fastbudsjett

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  sonar-project.properties
backend/app/: pyproject.toml
backend/app/alembic/versions/: 18a953a4b666_rename_title_column_of_categories_.py  1e9a8959155d_add_more_constraints.py  372d7f5a5055_add_db_columns_for_translations.py  464d6d4b717a_remove_is_delete_column.py  729a98e30119_add_tables.py  d4867f3a4c0a_first_revision.py  e05e028c9a3d_remove_uniqueness_for_title_x_cols.py
backend/app/app/: main.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: categories.py  items.py  itemtypes.py  payments.py  users.py
backend/app/app/crud/: __init__.py  base.py  crud_category.py  crud_item.py  crud_itemtype.py  crud_payment.py
backend/app/app/db/: base.py  exc.py  init_db.py
backend/app/app/models/: __init__.py  category.py  item.py  itemtype.py  payment.py  user.py
backend/app/app/schemas/: __init__.py  category.py  item.py  itemtype.py  payment.py  user.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/api/api_v1/: test_category.py  test_celery.py  test_items.py  test_payment.py  test_security.py  test_users.py
backend/app/app/tests/crud/: test_category.py  test_item.py  test_itemtype.py  test_payment.py  test_user.py
backend/app/app/tests/schemas/: test_category.py  test_item.py  test_itemtype.py  test_payment.py
backend/app/app/tests/utils/: category.py  item.py  itemtype.py  payment.py  user.py  utils.py
front/: config.py  requirements.txt
front/app/: __init__.py  auth.py  categories.py  config.py  items.py  payment_types.py  rest.py  routes.py  search.py  users.py  utils.py
front/app/auth/: controllers.py  forms.py
front/app/categories/: controllers.py  forms.py
front/app/items/: controllers.py  forms.py
front/app/search/: controllers.py  forms.py
front/app/static/: app.css
front/app/templates/: base.html  icons.html  render_items.html
front/app/translations/: README.md
front/tests/: test_utils.py
src/: Dockerfile  requirements.txt
src/app/: database.py  db.py  main.py
src/tests/: test_notes.py
templates/fastbudsjett/: README.md  docker-compose.yml
(+40 files in other folders)
