[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.15.0"
fastapi = "^0.68.1"
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.26.0"
celery = "^5.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.0.1"
pydantic = "^1.8"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
jinja2 = "^3.0.1"
psycopg2-binary = "^2.9.1"
alembic = "^1.7.3"
sqlalchemy = "^1.4.25"
pytest = "^6.2.5"
alchemy-mock = "^0.4.3"
mock = "^4.0.3"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"
isort = "^5.9.3"
autoflake = "^1.4"
flake8 = "^3.9.2"
pytest = "^6.2.5"
alchemy-mock = "^0.4.3"
mock = "^4.0.3"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^2.12.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

