[tool.poetry]
name = "fastbudsjett"
version = "0.1.0"
description = ""
authors = ["ondrno <ondrno@github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.75.2"
python-multipart = "^0.0.5"
email-validator = "^1.2.0"
requests = "^2.27.1"
celery = "^5.2.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.0.1"
pydantic = "^1.9"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.7"
sqlalchemy = "^1.4.36"
pytest = "^7.1.2"
alchemy-mock = "^0.4.3"
mock = "^4.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
mypy = "^0.950"
black = "^22.3"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest = "^7.1.2"
alchemy-mock = "^0.4.3"
mock = "^4.0.3"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

